# cicd-health-dashboard

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  EMAIL_SETUP.md  NGROK_SETUP.md  README.md  SCRIPTS.md  SETUP_GUIDE.md  WORKING_CONFIG.md  deploy.sh  docker-compose.yml  env.example  env.production  frontend_output.html  github-secrets.md  nginx.conf  prompt_logs.md  quick-start.sh  requirement_analysis_document.md  requirements.txt  run_server.py  setup-ngrok.sh  setup.sh  setup_config.sh  simple-test.sh  tech_design_document.md  test-email-integration.md  test-email.md  test-setup.sh  test_dashboard.py  test_email.py  test_endpoints.py  webhook-test.txt
.github/workflows/: ci-cd.yml  ci.yml  simulate-webhook.yml
backend/: .env.example  README.md  __init__.py  init_db.py  pyproject.toml  requirements.docker.txt  requirements.txt
backend/app/: __init__.py  alerts.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/providers/: github_actions.py  jenkins.py
backend/app/utils/: time.py
backend/tests/: test_api.py  test_basic.py  test_fail.py  test_imports.py  test_simple.py
docs/: prompot_logs.md  requirement_analysis_document.md  tech_design_document.md
frontend/: .env.example  README.md  dashboard.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  test.html  working-dashboard.html
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: BuildLogDrawer.jsx  BuildLogDrawer.tsx  BuildsTable.jsx  BuildsTable.tsx  EmptyState.jsx  FailureBanner.jsx  FilterBar.jsx  LoadingSkeleton.jsx  MetricsChart.jsx  MetricsChart.tsx  RelativeTime.jsx  StatusChip.jsx  SummaryCards.jsx  SummaryCards.tsx
frontend/src/pages/: BuildDetails.jsx  BuildDetails.tsx  Dashboard.jsx  Dashboard.tsx
frontend/src/services/: api.js  api.ts
ops/: .env.example  Makefile  compose.dev.yml  compose.prod.yml
ops/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  worker.Dockerfile
samples/: seed.sql  webhook_github_actions.json
scripts/: README.md  verify.sh
worker/: .env.example  README.md  poller.py  requirements.txt  run_scheduler.py  scheduler.py
